removes extra buttons, widens clear and delete buttons

--- a/index.html
+++ b/index.html
@@ -14,35 +14,28 @@
     <div id="calculator-body">
         <div id="calculator-display">0</div>
         <div id="buttons-flex-container">
-            <div id="key-divide-by-100" class="button">%</div>
-            <div id="key-clear-entry" class="button">CE</div>
-            <div id="key-clear" class="button">C</div>
-            <div id="key-divide" class="button">DEL</div>
-
-            <div id="key-reciprocal" class="button">1/x</div>
-            <div id="key-square" class="button">(x)^2</div>
-            <div id="key-square-root" class="button">(x)^1/2</div>
-            <div id="key-divide" class="button">/</div>
+            <div id="key-clear" class="button button-wide">CLEAR</div>
+            <div id="key-divide" class="button button-wide">DELETE</div>
 
             <div id="key-7" class="button button-white">7</div>
             <div id="key-8" class="button button-white">8</div>
             <div id="key-9" class="button button-white">9</div>
-            <div id="key-multiply" class="button">x</div>
+            <div id="key-divide" class="button">/</div>
 
             <div id="key-4" class="button button-white">4</div>
             <div id="key-5" class="button button-white">5</div>
             <div id="key-6" class="button button-white">6</div>
-            <div id="key-subtract" class="button">-</div>
+            <div id="key-multiply" class="button">x</div>
 
             <div id="key-1" class="button button-white">1</div>
             <div id="key-2" class="button button-white">2</div>
             <div id="key-3" class="button button-white">3</div>
-            <div id="key-plus" class="button">+</div>
+            <div id="key-subtract" class="button">-</div>
 
-            <div id="key-flip-sign" class="button button-white">+/-</div>
-            <div id="key-0" class="button button-white">0</div>
             <div id="key-period" class="button button-white">.</div>
+            <div id="key-0" class="button button-white">0</div>
             <div id="key-equals" class="button button-blue">=</div>
+            <div id="key-plus" class="button">+</div>
         </div>
     </div>
 </body>
