adds element selector calls

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="calculator-display">0</div>
         <div id="buttons-flex-container">
             <div id="key-clear" class="button button-wide">CLEAR</div>
-            <div id="key-divide" class="button button-wide">DELETE</div>
+            <div id="key-delete" class="button button-wide">DELETE</div>
 
             <div id="key-7" class="button button-white">7</div>
             <div id="key-8" class="button button-white">8</div>
