adds basic operations and clear functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <div id="calculator-body">
-        <div id="calculator-display">0</div>
+        <div id="expression-display"></div>
+        <div id="result-display">
+        </div>
         <div id="buttons-flex-container">
             <div id="key-clear" class="button button-wide">CLEAR</div>
             <div id="key-delete" class="button button-wide">DELETE</div>
@@ -32,7 +34,7 @@
             <div id="key-3" class="button button-white">3</div>
             <div id="key-subtract" class="button">-</div>
 
-            <div id="key-period" class="button button-white">.</div>
+            <div id="key-period" class="button">.</div>
             <div id="key-0" class="button button-white">0</div>
             <div id="key-equals" class="button button-blue">=</div>
             <div id="key-plus" class="button">+</div>
